Closed Bug 361576 Opened 18 years ago Closed 18 years ago

underlines sometimes missing or wrong thickness

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: pavlov, Assigned: masayuki)

References

Details

Attachments

(1 file, 1 obsolete file)

On mac cairo-cocoa builds I'm seeing some underline weirdness on various sites -- looks like a rounding problem. Some are 1px, 2px, 0.5px, 0px..
*** Bug 361414 has been marked as a duplicate of this bug. ***
Flags: blocking1.9?
Blocks: 334729
Summary: underlines sometimes wrong thickness → underlines sometimes missing or wrong thickness
Attached patch Patch rv1.0 (obsolete) — Splinter Review
This patch "suppresses" this bug. But the same bug sometimes happens on Windows too. I think that the layout code has a rounding problem. I'll check it in next year.
Assignee: vladimir → masayuki
Status: NEW → ASSIGNED
Attachment #249587 - Flags: review?(vladimir)
Comment on attachment 249587 [details] [diff] [review] Patch rv1.0 cancelling this patch. I'll fix this bug by bug 365336.
Attachment #249587 - Flags: review?(vladimir)
The patch of bug 365336 fixes this bug in most fonts. But for some fonts (e.g., Osaka-mono), this bug still can be reproduced. That is bug 365414.
Depends on: 365414
Comment on attachment 249587 [details] [diff] [review] Patch rv1.0 Sorry. We need this patch. Because "Osaka" return zero width for the thickness of the underline.
Attachment #249587 - Flags: review?(vladimir)
Comment on attachment 249587 [details] [diff] [review] Patch rv1.0 Can you add a comment in there saying why we're doing the PR_MAX? (maybe add this bug # in as well)
Attachment #249587 - Flags: review?(vladimir) → review+
Attached patch Patch rv1.0.1Splinter Review
Attachment #249587 - Attachment is obsolete: true
checked-in, thanks.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Flags: blocking1.9? → in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: