Bug 361576 underlines sometimes missing or wrong thickness r=vlad